--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
 			<version>3.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
